<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Musicast</string>
    <string name="action_settings">Settings</string>
    <string name="action_become_host">Become Host</string>
    <string name="action_stop_hosting">Stop Hosting</string>
    <string name="action_switch_to_solo">Enter Solo Mode</string>
    <string name="action_switch_to_party">Host a Party</string>
    <string name="hello_world">Hello world!</string>
    <string name="cast_app_id">E7378308</string>
    <string name="cast_app_id_smr">E3FA9FF0</string>
    <string name="cast_channel_namespace">urn:x-cast:com.xrdev.musicast</string>
    <string name="string_search">Search</string>
    <string name="string_loading">Loading</string>
    <string name="title_activity_spotify_login">Log in to Spotify</string>
    <string name="string_spotify_login_button">LOG IN TO SPOTIFY</string>
    <string name="skip_login">SKIP LOGIN</string>
    <string name="string_spotify_login">Log in with your Spotify account and start casting the videos of your favorite songs to Chromecast!</string>
    <string name="string_spotify_login_admin">You need to login to host a Party or use Solo Mode.</string>
    <string name="string_spotify_login_guest">You can skip login authentication and just vote as a Guest in this Party.</string>
    <string name="string_tracks">" tracks"</string>
    <string name="string_add_to_queue">"Add all tracks"</string>
    <string name="string_swap_playlist">"Replace all tracks"</string>
    <string name="string_videos_found">" videos found"</string>
    <string name="title_activity_tracks">Tracks</string>
    <string name="string_spacer">" - "</string>
    <string name="string_success">Success</string>
    <string name="video_not_found">YouTube video not found for this track</string>
    <string name="title_activity_result">Test Result</string>
    <string name="title_activity_login_test">LoginTest</string>
    <string name="title_activity_spotify_playlists">Playlists</string>
    <string name="title_text">Musicast Debug Activity</string>
    <string name="string_video_found">FOUND</string>
    <string name="string_video_not_found">NOT FOUND</string>
    <string name="string_video_not_playing">No video currently playing or Chromecast disconnected.</string>
    <string name="play_pause">Play/Pause</string>
    <string name="string_logout">Logout</string>
    <string name="string_logout_successful">Logged out successfully.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_queue">PLAY QUEUE</string>
    <string name="vote_fragment_text_solo">No voting available in Solo Mode.</string>
    <string name="host_party">Host Party</string>
    <string name="no_pending_votes">No pending votes.</string>
    <string name="vote_fragment_text_change_track">Play %1$s next?</string>
    <string name="vote_fragment_text_change_playlist">Play %1$s playlist?</string>
    <string name="vote_fragment_text_load_play">Looking for videos before playing your playlist: %1$d/%2$d.</string>
    <string name="vote_fragment_text_load_vote">Looking for videos before sending your playlist to vote: %1$d/%2$d.</string>
    <string name="string_solo_mode_button">SOLO MODE</string>
    <string name="string_host_party_button">HOST PARTY</string>
    <string name="string_solo_mode_selection">It looks like there is nobody casting on Party Mode.\n\n You can control your Chromecast using Solo Mode or start hosting a Party.</string>
    <string name="string_party_guest">Someone has started a party! \n\n You can see the play queue and vote in your favorite songs in the slider below. \n\n If you are connected with your Spotify account, you will be able add new songs to the play queue. </string>
    <string name="string_party_admin">You are the party host! \n\n As a host, you can vote, control playback and change the play queue songs. </string>
    <string name="string_got_it">GOT IT!</string>
    <string name="requestCode">9000</string>
    <string name="string_chromecast_selection">Welcome to Musicast!\n\n You need to be connected to a Chromecast in order to use this app. \n\n Please make sure that your Chromecast is turned on and set up and connect using the selector button in the action bar. </string>
    <string name="error_no_tracks_on_playlist">No tracks on the selected playlist.</string>
    <string name="error_not_admin_swap">You are not the host of this party and cannot swap playlists.</string>
    <string name="string_no_playlists_or_logged_out">No playlists found. \n\n Make sure you are logged in to Spotify on Musicast and \n created or are following playlists.</string>
    <string name="feedback_track_add">Track being added to the Play Queue with your vote.</string>
    <string name="feedback_error_not_admin">Sorry, only the party host is allowed to do this.</string>
    <string name="feedback_error_has_admin">Someone already has become the Party Host.</string>
    <string name="solo_mode">Solo Mode</string>
    <string name="party_mode_guest">Party Guest</string>
    <string name="party_mode_host">Hosting Party</string>
    <string name="playlists">Playlists</string>

    <string name="string_no_admin_on_party">The previous Party Host has disconnected. \n\n Would you like to become the new Host or keep connected as a Guest?</string>
    <string name="string_become_host">BECOME HOST</string>
    <string name="string_stay_as_guest">STAY AS GUEST</string>

    <string name="string_login_required_to_host">You need to log in with your Spotify account to become a Party Host.</string>

    <string name="add_tracks_to_queue_dialog_title">Add all tracks to queue?</string>
    <string name="add_tracks_to_queue_dialog_message">Are you sure you want to add every music video found on this playlist to the play queue?</string>
    <string name="add_tracks_to_queue_dialog_yes">Add tracks</string>

    <string name="swap_playlist_dialog_title">Swap current playlist?</string>
    <string name="swap_playlist_dialog_message">Are you sure you want to replace all the tracks on the play queue with this playlist? Your current play queue and votes sent will be lost.</string>
    <string name="swap_playlist_dialog_yes">Swap playlist</string>

    <string name="stop_hosting_dialog_title">Stop Hosting this Party?</string>
    <string name="stop_hosting_dialog_message">Do you want to stop hosting this party? The current tracks will keep playing and anyone will be able to become the new host.</string>
    <string name="stop_hosting_dialog_yes">Stop hosting</string>

    <string name="switch_to_solo_dialog_title">Switch to Solo Mode?</string>
    <string name="switch_to_solo_dialog_message">Are you sure you want to switch to Solo Mode? Your current play queue and votes sent will be lost.</string>
    <string name="switch_to_solo_dialog_yes">Switch to Solo Mode</string>

    <string name="switch_to_party_dialog_title">Start Hosting a Party?</string>
    <string name="switch_to_party_dialog_message">Are you sure you want to start hosting a Party? Your current play queue will be lost.</string>
    <string name="switch_to_party_dialog_yes">Start hosting</string>

    <string name="cancel">Cancel</string>
</resources>
