<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/playlist_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlist_header_info">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="PlaylistName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:id="@+id/text_header_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_tracks"
            android:id="@+id/text_header_tracks"
            android:layout_alignTop="@+id/text_header_num_tracks"
            android:layout_toRightOf="@+id/text_header_num_tracks"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="X"
            android:id="@+id/text_header_num_tracks"
            android:layout_below="@+id/text_header_name"
            android:layout_alignLeft="@+id/text_header_name"
            android:layout_alignStart="@+id/text_header_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_videos_found"
            android:id="@+id/text_header_videos"
            android:layout_alignTop="@+id/text_header_num_videos_found"
            android:layout_toRightOf="@+id/text_header_num_videos_found"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="X"
            android:id="@+id/text_header_num_videos_found"
            android:layout_below="@+id/text_header_num_tracks"
            android:layout_alignLeft="@+id/text_header_num_tracks"
            android:layout_alignStart="@+id/text_header_num_tracks" />

    </RelativeLayout>


    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/playlist_header_buttons"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlist_header_info"
        android:gravity="center|top"
        tools:context="com.xrdev.musicast.activity.MusicastActivity">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/button_add_to_queue"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:drawableLeft="@drawable/ic_action_add_to_queue"
            android:text="@string/string_add_to_queue"
            android:textSize="15sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/button_swap"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_action_replace"
            android:text="@string/string_swap_playlist"
            android:layout_below="@id/button_add_to_queue"
            android:textSize="15sp" />





    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:layout_below="@id/playlist_header_buttons"
        android:id="@+id/divider" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/android:list"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
